Finish icon selection for categories editor

--- a/admin/dynamics/html/form/categoriesedit.html
+++ b/admin/dynamics/html/form/categoriesedit.html
@@ -18,9 +18,12 @@
 
 		<div class="form_element">
 			<label id="icon_label" class="left_label" for="icon">ICON</label>
-			<select id="icon" name="icon">
-				{ICONS}
-			</select>
+			<div>
+				<select id="icon" name="icon">
+					{ICONS}
+				</select>
+				<img id="icon_preview" style="display: none" src="/">
+			</div>
 		</div>
 
 		{CATEGORY_ID}
