Updating existing resources now works
honestly i don't know how this worked even using a MySQL database... feels like a lot of this should have been broken

--- a/admin/dynamics/html/form/contact.html
+++ b/admin/dynamics/html/form/contact.html
@@ -11,5 +11,6 @@
 		</select>
 		<input type="text" class="contact_input name"  placeholder="NAME"  name="{NAME_CONT_NAME}" value="{CONT_NAME}">
 		<input type="text" class="contact_input value" placeholder="VALUE" name="{NAME_CONT_VALUE}" value="{CONT_VALUE}">
+		<input type="hidden" class="contact_input id" name="{NAME_CONT_ID}" value="{CONT_ID}">
 	</div>
 </div>
